--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,13 +3,33 @@
 @tailwind utilities;
 
 @keyframes wave {
-    0% { transform: rotate(0deg); }
-    15% { transform: rotate(14deg); }
-    30% { transform: rotate(-8deg); }
-    40% { transform: rotate(14deg); }
-    50% { transform: rotate(-4deg); }
-    60% { transform: rotate(10deg); }
-    100% { transform: rotate(0deg); }
+    0% {
+        transform: rotate(0deg);
+    }
+
+    15% {
+        transform: rotate(14deg);
+    }
+
+    30% {
+        transform: rotate(-8deg);
+    }
+
+    40% {
+        transform: rotate(14deg);
+    }
+
+    50% {
+        transform: rotate(-4deg);
+    }
+
+    60% {
+        transform: rotate(10deg);
+    }
+
+    100% {
+        transform: rotate(0deg);
+    }
 }
 
 .hand-motion {
@@ -26,8 +46,8 @@
     overflow-y: scroll;
     scrollbar-width: none;
     -ms-overflow-style: none;
-  }
-  
+}
+
 .slider-container::-webkit-scrollbar {
     display: none;
 }
@@ -36,4 +56,22 @@
     scroll-snap-align: start;
     display: flex;
     flex-direction: column;
+}
+
+.swiper-button-next,
+.swiper-button-prev {
+    color: #828B90 !important;
+}
+
+.swiper-button-next:hover,
+.swiper-button-prev:hover {
+    color: #1F2833 !important;
+}
+
+.swiper-pagination-bullet-active {
+    background-color: #828B90 !important;
+}
+
+.swiper-pagination-bullet {
+    background-color: #AFCDF5 !important;
 }
