--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,22 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+    font-family: "Roboto";
+    src: url("/fonts/roboto.ttf");
+}
+
+@font-face {
+    font-family: "Lora";
+    src: url("/fonts/lora.ttf");
+}
+
+.name-highlight {
+    background: linear-gradient(90deg, #07A3B2, #D9ECC7);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
 @keyframes wave {
     0% {
         transform: rotate(0deg);
